// Copyright 2020 The golang.design Initiative authors.
// All rights reserved. Use of this source code is governed by
// a GNU GPL-3.0 license that can be found in the LICENSE file.

syntax = "proto3";

option go_package = ".;proto";

package proto;

service Midgard {
    rpc Ping(PingInput) returns (PingOutput) {}
    rpc GetClipboard(GetClipboardInput) returns (GetClipboardOutput) {}
    rpc PutClipboard(PutClipboardInput) returns (PutClipboardOutput) {}
    rpc GetURI(GetURIInput) returns (GetURIOutput) {}
}

message PingInput {}
message PingOutput {}

message GetClipboardInput {}
message GetClipboardOutput {
    bytes Data = 1;
}

message PutClipboardInput {
    bytes Data = 1;
}
message PutClipboardOutput {}

message GetURIInput {}
message GetURIOutput {
    string Address = 1; 
}
